@@ -1,3 +1,9 @@
+2009-05-14  Daniel Kraft  <d@domob.eu>
+
+	PR fortran/40045
+	* dump-parse-tree.c (show_typebound): Fix missing adaption to new
+	type-bound procedure storage structure.
+
 2009-05-14  Janus Weil  <janus@gcc.gnu.org>
 
 	PR fortran/39996
